# vitulus_imu

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
launch/: imu_madgwick.launch  vitulus_imu.launch  vitulus_imu_v2.launch
nodes/: bno085_node  bno085v2_node
rviz/: imu.rviz
src/: imu_listener.cpp  nwu_to_enu.cpp
src/bno085v2_node/adafruit_bno08xMOD/: __init__.py
